--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -113,6 +113,20 @@
             <version>${playwright.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Para que permita subir archivos -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
         <!--<dependency>
             <groupId>com.tallerwebi</groupId>
             <artifactId>tallerwebi-base</artifactId>
