--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -113,20 +113,19 @@
             <version>${playwright.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>com.tallerwebi</groupId>
-            <artifactId>tallerwebi-base</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>-->
-        <!-- compile only, deployed container will provide this -->
-        <!--
+
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servletapi.version}</version>
-            <scope>provided</scope>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
         </dependency>
-        -->
+
+        <!-- Argegada -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
 
     </dependencies>
 
