--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -120,11 +120,45 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.5</version>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <!-- NO BORRAR / DEPENDENCIAS WEBSOCKET -->
+        <!-- Dependencia para Spring WebSocket -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>5.2.22.RELEASE</version>
+        </dependency>
+
+
+        <!-- Dependencia para Spring Messaging (STOMP) -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+            <version>5.2.22.RELEASE</version>
+        </dependency>
+
+        <!-- WEBSOCKET DEPENDENCIAS SINAL-->
+        <!-- Jackson para JSR310 (Java 8 Date and Time API)-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version> <!-- Usa la última versión disponible -->
+        </dependency>
+        <!-- Dependencia para manejar tipos de fecha/hora de Java 8 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version> <!-- Asegúrate de usar la última versión -->
+        </dependency>
+
+
+        <!---FINAL DEPENDENCIA -->
+
 
     </dependencies>
 
