--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -23,6 +23,12 @@
     </properties>
 
     <dependencies>
+        <!--dependencia oficial de google gemini disponible en Maven central-->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-aiplatform</artifactId>
+            <version>3.4.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -185,8 +191,6 @@
 
 
         <!---FINAL DEPENDENCIA -->
-
-
     </dependencies>
 
     <build>
