pase la conexion con la ia a una nueva clase, agregue un archivo del tipo properties , agregue dependencias nuevas,  modifique las excepciones para que ademas puedan mostrar el mensaje generado por la misma excepcion, cambie algo mas en el SpringWebConfig para que lea el archivo de properties que esta en resources, modifique mi css para que no se rompa tanto... modifique los metodos para hacer resumen.. y nada mas

--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -22,7 +22,14 @@
         <hsqldb.version>2.3.2</hsqldb.version>
     </properties>
 
+
     <dependencies>
+        <!--libreria de markdown -->
+        <dependency>
+            <groupId>com.vladsch.flexmark</groupId>
+            <artifactId>flexmark-all</artifactId>
+            <version>0.62.2</version> </dependency>
+
         <!--dependencia oficial de google gemini disponible en Maven central-->
         <dependency>
             <groupId>com.google.cloud</groupId>
