--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -160,12 +160,7 @@
             <version>2.0.29</version> <!-- para leer PDFs -->
         </dependency>
 
-        <dependency>
-            <!--Esa dependencia es Jackson Databind, y sirve para convertir entre JSON y objetos Java usando ObjectMapper.-->
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.20.0</version>
-        </dependency>
+
         <!-- NO BORRAR / DEPENDENCIAS WEBSOCKET -->
         <!-- Dependencia para Spring WebSocket -->
         <dependency>
@@ -190,11 +185,11 @@
             <version>2.15.2</version> <!-- Usa la última versión disponible -->
         </dependency>
         <!-- Dependencia para manejar tipos de fecha/hora de Java 8 -->
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--            <artifactId>jackson-databind</artifactId>-->
-<!--            <version>2.15.2</version> &lt;!&ndash; Asegúrate de usar la última versión &ndash;&gt;-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version> <!-- Asegúrate de usar la última versión -->
+        </dependency>
 
 
         <!---FINAL DEPENDENCIA -->
