--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -90,7 +90,8 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
-            <scope>test</scope>
+<!--            PARA USAR MULTIpartFile no solo en test-->
+            <!--            <scope>test</scope>-->
         </dependency>
 
         <dependency>
@@ -214,6 +215,14 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.20.0</version>
         </dependency>-->
+
+        <!--convertir a lindo pdf-->
+            <dependency>
+                <groupId>com.openhtmltopdf</groupId>
+                <artifactId>openhtmltopdf-pdfbox</artifactId>
+                <version>1.0.10</version>
+            </dependency>
+
 
     </dependencies>
 
