analisis de intereses con gemini

--- a/tallerwebi-base/src/main/resources/application.properties
+++ b/tallerwebi-base/src/main/resources/application.properties
@@ -3,3 +3,12 @@
 gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash:generateContent
 gemini.api.key=AIzaSyDXbMvzQzWjPvOyx_bx8zlxXaKXaehmCtc
 #gemini.api.key=AIzaSyDD38z_bbC2QOt36pppeU0fp19vHxvwq2I
+
+#AIzaSyA85Z5s4oIPOiJ3-UpcmVOncSHrH_GTy5A
+
+
+
+gemini.api-key=AIzaSyCZ5NyZb3imOMNu9TUb_25AX4GJSsfsR6c
+
+gemini.model.name=gemini-2.5-flash
+gemini.http.timeout=60000
