--- a/tallerwebi-base/src/main/resources/application.properties
+++ b/tallerwebi-base/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# logging para debug de WS y Hibernate temporalmente
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 # src/main/resources/application.properties
 #Configuracion de la api de gemini
 gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash:generateContent
