--- a/tallerwebi-base/src/main/resources/application.properties
+++ b/tallerwebi-base/src/main/resources/application.properties
@@ -12,16 +12,17 @@ gemini.api.key=AIzaSyDXbMvzQzWjPvOyx_bx8zlxXaKXaehmCtc
 
 #AIzaSyA85Z5s4oIPOiJ3-UpcmVOncSHrH_GTy5A
 
-
-
+# === CONFIGURACIÓN DE GEMINI TEXT ===
 gemini.api-key=AIzaSyCZ5NyZb3imOMNu9TUb_25AX4GJSsfsR6c
-
 gemini.model.name=gemini-2.5-flash
 gemini.http.timeout=60000
-
+gemini.base-url=https://generativelanguage.googleapis.com/v1beta/
 # 2. ? Configuración para la Generación de Imágenes (Futura Integración)
 # Nota: La URL del endpoint real de Imagen puede ser diferente a la de Gemini.
 # Puedes usar la misma clave de Gemini para la autenticación, pero el endpoint cambia.
-image.generation.api.url=https://generativelanguage.googleapis.com/v1beta/models/imagen-3.0-generate:generateImages
+image.generation.api.url=https://generativelanguage.googleapis.com/v1beta/models/imagegeneration:generateImage
+
+
 image.generation.api.key=${gemini.api-key}
+image.generation.path.base:imagenesGeneradas
 
