--- a/tallerwebi-base/pom.xml
+++ b/tallerwebi-base/pom.xml
@@ -249,6 +249,12 @@
             <artifactId>lucene-core</artifactId>
             <version>9.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-test-framework</artifactId>
+            <version>9.9.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
